assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Roboto&display=swap');

/* General Styling */

h1,
h2,
h3,
h5 {
    font-family: 'Abhaya Libre', serif;
    text-transform: uppercase;
    text-align: center;
    color: #100108;
    letter-spacing: 0.250rem;
    padding-bottom: 0.5rem;
}

body {
    font-family: 'Roboto', sans-serif;
    padding: 0;
    margin: 0;
}

/* General Classes */

.section-padding {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
}

.header-style h2{
    text-align: center;
    margin: auto;
    font-size: 2rem;
}

/* Headings and Logo */

#header-bg {
    height: 4.375rem;
    width: 100%;
    background-color: #f0c808;
}

#logo {
    float: left;
    margin: 0.8rem 0 0 1.5em;
    font-size: 2.5rem;
}

#menu {
    float: right;
    margin-right: 3em;
    font-size: 1.25rem;
    font-family: 'Abhaya Libre', serif;
    letter-spacing: 0.1rem;

}

#menu li {
    list-style-type: none;
    float: left;
    padding: 0.5rem;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    color: rgb(255, 255, 255, 0.8)
}

#active-page {
    border-bottom: 2px solid #080300;
}

/* Hero and Circle Image */

#hero-container {
    width: 100%;
    height: 34.375rem;
    position: relative;
}

#hero-image {
    width: 100%;
    height: 80%;
    background: url(../images/hero-image_3.jpeg) no-repeat center;
    background-size: cover;
}

#circle-container {
    height: 15.625rem;
    width: 15.625rem;
    position: absolute;
    left: 50%;
    top: 98%;
    transform: translate(-50%, -98%);
    background-color: white;
    border-radius: 50%;
    padding: 1rem;
}

#circle-image {
    height: 100%;
    background: url(../images/circle-image_2.JPG) no-repeat center;
    border-radius: 50%;

}

/* About Us */

#about-us-container {
    width: 100%;
}

#about-us-container p {
    text-align: center;
    font-style: italic;
    font-weight: 600;
    margin: 1.25rem 9.375rem 1.25rem 9.375rem;
}

#about-us-container span {
    color:#880044;
}

#about-us-container a {
    text-decoration: underline;
    color: inherit;
    font-weight: bold;
}

#about-us-container a:hover {
    color: #f0c808;
}

#about-us-bg {
    height: 27.5rem;
    width: 100%;
    object-fit: cover;
    clear: both;
    opacity: 2;
    padding-top: 1rem
}

/* Our Reasons for Travel */

#reason-container {
    height: 350px;
}

#reason-container p {
    font-style: italic;
}


#left-reason {
    width: 25%;
    height: 200px;
    margin-left: 50px;
    float: left;
    padding: 5px;
    text-align: justify;
}

#right-reason {
    width: 25%;
    height: 200px;
    float: right;
    margin-right: 50px;
    padding: 5px;
    text-align: justify;
}

#center-reason {
    width: 27%;
    height: 200px;
    margin: auto;
    padding: 5px;
    text-align: justify;
}

/* Last Place Visited */

.video-container {
    position: relative;
    width: 50%;
    height: 300px;
    margin-left: 50px;
    margin-right: 50px;
}

.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#video-paragraph {
    float: right;
    width: 30%;
    height: auto;
    margin: 100px 50px 0 50px;
    border: 1px dashed red;
}

#maps-container iframe {
    margin-top: 50px;
    width: 100%;
    height: 250px;
    border: none;
}

/* Footer */

#content-container {
    min-height: 100vh;
    position: relative;
    padding-bottom: 6.25rem;
}

#footer {
    height: 6.25rem;
    width: 100%;
    background-color: #f0c808;
    position: absolute;
    bottom: 0;
}

#footer h5 {
    margin: 0
}

#social-footer {
    text-align: center;
}

#social-footer li {
    display: inline;
}

#social-footer i {
    font-size: 200%;
    padding: 0 4.5rem 0 2rem;
    color: #100108;
}

/* Island Inspirations */

#island-inspirations {
    clear: both;
    height: 400px;
}

#video-maldives {
    float: left;
    position: relative;
    width: 40%;
    height: 300px;
    margin-left: 50px;
}

#video-maldives iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#video-thailand {
    float: right;
    position: relative;
    width: 40%;
    height: 300px;
    margin-right: 50px;
}

#video-thailand iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#island-inspirations figcaption {
    position: absolute;
    top: 310px;
    text-transform: uppercase;
}

/* Scenery Inspirations */

#scenery-inspirations {
    clear: both;

}

.image-container {
    clear: both;
    column-count: 3;
    column-gap: 5px;
}

.image-container img {
    width: 100%;
}

/* Contact Us */

#form-container {
    clear: both;
    height: 600px;
    background: url(../images/contact_us-bg_4.jpeg) no-repeat center;
    background-size: cover;
    opacity: 0.8;
}

#form-details {
    position: relative;
    top: 5%;
    left: 27%;
    width: 40%;
    height: 65%;
    background-color: rgba(60, 60, 60, 0.7);
    color: white;
    padding: 3%;
}

#form-input {
    color: #080300;
    width: 100%;
    height: 30px;
    margin: 5px 0 20px 0px;
    border: 1px solid black;
    border-radius: 10px;
}

#form-details h3 {
    text-align: left;
    color: white;
    text-decoration-line: underline;
    text-transform: none;
    margin: 2px 0 10px 0;
}

#form-details label {
    font-family: 'Roboto', sans-serif;
    text-align: left;
    color: white;
    letter-spacing: 2.5px;
}

#form-details textarea {
    width: 100%;
    height: 100px;
    margin: 20px 0;
    border-radius: 10px;
}

#form-details input[type=submit] {
    border-radius: 10px;
    font-size: 100%;
    padding: 2%;
    background-color: red;
    color: white;

}

